--- a/resources/css/navkonfig.css
+++ b/resources/css/navkonfig.css
@@ -66,3 +66,38 @@
     /*background-color: #B0FFC5;*/
     color:blue;
 }
+
+.rusak .x-change-cell9 {
+    color:red;
+}
+
+.baik .x-change-cell9 {
+    color:green;
+}
+
+.rusak .x-change-cell10 {
+    color:red;
+}
+
+.baik .x-change-cell10 {
+    color:green;
+}
+
+.rusak .x-change-cell11 {
+    color:red;
+}
+
+.baik .x-change-cell11 {
+    background-color: #B0FFC5;
+    color:green;
+}
+
+.rusak .x-change-cell12 {
+    background-color: #FFB0C4;
+    color:red;
+}
+
+.baik .x-change-cell12 {
+    background-color: #B0FFC5;
+    color:green;
+}
