--- a/resources/css/navkonfig.css
+++ b/resources/css/navkonfig.css
@@ -66,7 +66,7 @@
     /*background-color: #B0FFC5;*/
     color:blue;
 }
-
+/*
 .rusak .x-change-cell9 {
     color:red;
 }
@@ -83,21 +83,32 @@
     color:green;
 }
 
-.rusak .x-change-cell11 {
+.rusak1 .x-change-cell11 {
     color:red;
 }
 
-.baik .x-change-cell11 {
+.baik1 .x-change-cell11 {
     background-color: #B0FFC5;
     color:green;
 }
 
-.rusak .x-change-cell12 {
+.rusak2 .x-change-cell12 {
     background-color: #FFB0C4;
     color:red;
 }
 
-.baik .x-change-cell12 {
+.baik2 .x-change-cell12 {
     background-color: #B0FFC5;
     color:green;
 }
+
+.rusak .x-change-cell {
+    background-color: #FFB0C4;
+    color:red;
+}
+
+.baik .x-change-cell {
+    background-color: #B0FFC5;
+    color:green;
+}
+//*/
