mau jadi reliability dimjo

--- a/resources/css/navkonfig.css
+++ b/resources/css/navkonfig.css
@@ -104,4 +104,11 @@
 	background-image: url('./images/accept.png');
 }
 
+.scala {
+	background-image: url('./images/scala.png');
+}
+
+.up {
+	background-image: url('./images/up.png');
+}
 
