view muter muter

--- a/resources/css/navkonfig.css
+++ b/resources/css/navkonfig.css
@@ -140,3 +140,12 @@
 	font-size: 18px;
 }
 
+.newHir {
+    background-image: url('./images/folder-add.png');
+}
+.newUnit	{
+	background-image: url('./images/comp16.png');
+}
+.newEquip {
+	background-image: url('./images/connect.png');
+}
